--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<com.google.android.material.appbar.AppBarLayout
 		android:id="@+id/appBarLayout"
@@ -24,5 +25,28 @@
 		</com.google.android.material.appbar.MaterialToolbar>
 
 	</com.google.android.material.appbar.AppBarLayout>
+
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/recyclerViewUniversesFilter"
+		android:layout_width="0dp"
+		app:layout_constraintStart_toStartOf="parent"
+		android:layout_marginTop="10dp"
+		android:paddingHorizontal="5dp"
+		android:clipChildren="false"
+		android:clipToPadding="false"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+		app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+		android:orientation="horizontal"
+		tools:listitem="@layout/item_universe_default"
+		android:layout_height="wrap_content" />
+
+	<androidx.recyclerview.widget.RecyclerView
+		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+		android:id="@+id/recyclerViewFighters"
+		android:layout_width="match_parent"
+		android:layout_marginTop="10dp"
+		app:layout_constraintTop_toBottomOf="@id/recyclerViewUniversesFilter"
+		android:layout_height="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
