--- a/app/src/main/res/drawable/shape_universe_background.xml
+++ b/app/src/main/res/drawable/shape_universe_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-	android:color="@color/white">
+	android:color="@color/darker_blue">
 	<item android:id="@android:id/mask">
 		<shape>
 			<corners android:radius="5dp" />
