--- a/app/src/main/res/layout/item_fighter.xml
+++ b/app/src/main/res/layout/item_fighter.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:background="?attr/selectableItemBackground"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
 
@@ -11,6 +12,7 @@
 		android:layout_height="73dp"
 		android:layout_margin="13dp"
 		app:layout_constraintBottom_toBottomOf="parent"
+		android:src="@drawable/shape_logo"
 		app:layout_constraintDimensionRatio="1:1"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
@@ -57,6 +59,7 @@
 		android:maxLines="1"
 		android:textAlignment="viewEnd"
 		android:layout_marginBottom="2dp"
+		app:layout_constraintStart_toStartOf="@id/text_view_downloads"
 		app:layout_constraintBottom_toTopOf="@id/textViewRate"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
@@ -83,7 +86,6 @@
 		android:id="@+id/text_view_downloads"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		app:layout_constraintStart_toStartOf="@id/textViewPrice"
 		android:layout_marginEnd="13dp"
 		android:ellipsize="end"
 		android:maxLines="1"
@@ -92,7 +94,7 @@
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/textViewRate"
 		app:layout_constraintVertical_chainStyle="packed"
-		tools:text="Price: $230" />
+		tools:text="Downloads: 12312330" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
