--- a/app/src/main/res/layout/item_universe.xml
+++ b/app/src/main/res/layout/item_universe.xml
@@ -5,6 +5,7 @@
 	android:background="@drawable/shape_universe_background"
 	android:layout_marginVertical="10dp"
 	android:layout_marginHorizontal="5dp"
+	android:textColor="@color/white"
 	android:paddingHorizontal="24dp"
 	android:paddingVertical="14dp"
 	android:elevation="5dp"
