--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
 	<color name="blue">#1A90F0</color>
 	<color name="dark_blue">#2360B1</color>
 	<color name="darker_blue">#003C7E</color>
-	<color name="divider_gray">#E5E5E5</color>
+	<color name="divider_gray">#CCCCCC</color>
+	<color name="dark_gray">#404040</color>
 	<color name="black">#FF000000</color>
 	<color name="white">#FFFFFFFF</color>
 </resources>
