--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,8 @@
 		<!-- Status and navigation bar color. -->
 		<item name="android:statusBarColor" tools:targetApi="l">@color/dark_blue</item>
 		<item name="android:navigationBarColor" tools:targetApi="l">@color/dark_blue</item>
+
+		<item name="android:textColor">@color/dark_gray</item>
 	</style>
 
 	<style name="Theme.App.OnBoarding">
