--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,54 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/swipeToRefreshLayout"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	xmlns:tools="http://schemas.android.com/tools">
+	android:layout_height="match_parent">
 
-	<com.google.android.material.appbar.AppBarLayout
-		android:id="@+id/appBarLayout"
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		android:layout_height="wrap_content">
+		android:layout_height="match_parent">
 
-		<com.google.android.material.appbar.MaterialToolbar
-			android:id="@+id/toolbar"
+		<com.google.android.material.appbar.AppBarLayout
+			android:id="@+id/appBarLayout"
 			android:layout_width="match_parent"
-			app:title="@string/app_name"
-			android:background="?colorPrimary"
-			app:titleTextColor="@color/white"
-			app:titleTextAppearance="@style/Theme.App"
-			android:layout_height="wrap_content">
+			android:layout_height="wrap_content"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent">
 
-		</com.google.android.material.appbar.MaterialToolbar>
+			<com.google.android.material.appbar.MaterialToolbar
+				android:id="@+id/toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:background="?colorPrimary"
+				app:title="@string/app_name"
+				app:titleTextAppearance="@style/Theme.App"
+				app:titleTextColor="@color/white">
 
-	</com.google.android.material.appbar.AppBarLayout>
+			</com.google.android.material.appbar.MaterialToolbar>
 
-	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/recyclerViewUniversesFilter"
-		android:layout_width="0dp"
-		app:layout_constraintStart_toStartOf="parent"
-		android:layout_marginTop="10dp"
-		android:paddingHorizontal="10dp"
-		android:clipChildren="false"
-		android:clipToPadding="false"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-		app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-		android:orientation="horizontal"
-		tools:listitem="@layout/item_universe"
-		android:layout_height="wrap_content" />
+		</com.google.android.material.appbar.AppBarLayout>
 
-	<androidx.recyclerview.widget.RecyclerView
-		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-		android:id="@+id/recyclerViewFighters"
-		android:layout_width="match_parent"
-		tools:listitem="@layout/item_fighter"
-		android:layout_marginTop="10dp"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/recyclerViewUniversesFilter"
-		android:layout_height="0dp" />
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/recyclerViewUniversesFilter"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="10dp"
+			android:clipChildren="false"
+			android:clipToPadding="false"
+			android:orientation="horizontal"
+			android:paddingHorizontal="10dp"
+			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+			tools:listitem="@layout/item_universe" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/recyclerViewFighters"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_marginTop="10dp"
+			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/recyclerViewUniversesFilter"
+			tools:listitem="@layout/item_fighter" />
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
