--- a/app/src/main/res/navigation/navigation_home.xml
+++ b/app/src/main/res/navigation/navigation_home.xml
@@ -8,23 +8,27 @@
 	<fragment
 		android:id="@+id/homeFragment"
 		android:name="quevedo.soares.leandro.techtest.view.home.HomeFragment"
-		android:label="HomeFragment"
+		android:label="@string/home_toolbar_title"
 		tools:layout="@layout/fragment_home">
 
 		<action
 			android:id="@+id/action_homeFragment_to_fighterDetailFragment"
+			app:destination="@id/fighterDetailFragment"
 			app:enterAnim="@anim/anim_fade_in"
 			app:exitAnim="@anim/anim_fade_out"
 			app:popEnterAnim="@anim/anim_fade_in"
-			app:popExitAnim="@anim/anim_fade_out"
-			app:destination="@id/fighterDetailFragment" />
+			app:popExitAnim="@anim/anim_fade_out" />
+
+		<action
+			android:id="@+id/action_homeFragment_to_fighterFilterFragment"
+			app:destination="@id/fighterFilterFragment" />
 
 	</fragment>
 
 	<fragment
 		android:id="@+id/fighterDetailFragment"
 		android:name="quevedo.soares.leandro.techtest.view.fighterdetail.FighterDetailFragment"
-		android:label="fragment_fighter_detail"
+		android:label="@string/fighter_detail_toolbar_title"
 		tools:layout="@layout/fragment_fighter_detail">
 
 		<argument
@@ -33,5 +37,11 @@
 			app:nullable="false" />
 
 	</fragment>
+
+	<fragment
+		android:id="@+id/fighterFilterFragment"
+		android:name="quevedo.soares.leandro.techtest.view.fighterfilter.FighterFilterFragment"
+		android:label="@string/home_menu_action_filter"
+		tools:layout="@layout/fragment_fighter_filter" />
 
 </navigation>
