--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<color name="blue">#1A90F0</color>
+	<color name="transparent_blue">#751A90F0</color>
 	<color name="dark_blue">#2360B1</color>
 	<color name="darker_blue">#003C7E</color>
 	<color name="divider_gray">#CCCCCC</color>
 	<color name="dark_gray">#404040</color>
+	<color name="light_background">#F4F4F4</color>
+	<color name="star_active">#FFCD00</color>
+	<color name="star_inactive">#979797</color>
 	<color name="black">#FF000000</color>
 	<color name="white">#FFFFFFFF</color>
 </resources>
