--- a/app/src/main/res/layout/fragment_fighter_detail.xml
+++ b/app/src/main/res/layout/fragment_fighter_detail.xml
@@ -58,14 +58,19 @@
 		app:layout_constraintTop_toBottomOf="@id/textViewName"
 		tools:text="@tools:sample/lorem" />
 
-	<View
+	<quevedo.soares.leandro.techtest.view.widget.RatingBar
 		android:id="@+id/ratingBar"
-		android:layout_width="128dp"
-		android:layout_height="32dp"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
 		android:layout_marginTop="20dp"
+		app:colorActive="@color/star_active"
+		app:colorInactive="@color/star_inactive"
+		android:enabled="false"
+		app:starSize="25dp"
+		app:starPaddingVertical="1dp"
+		app:starPaddingHorizontal="5dp"
 		android:layout_marginEnd="20dp"
 		android:layout_marginStart="20dp"
-		android:background="@color/darker_blue"
 		app:layout_constraintEnd_toStartOf="@+id/imageViewAvatar"
 		app:layout_constraintHorizontal_bias="0"
 		app:layout_constraintStart_toStartOf="parent"
@@ -118,6 +123,7 @@
 		android:layout_height="0dp"
 		app:layout_constraintHeight_default="wrap"
 		android:layout_marginTop="40dp"
+		android:lineHeight="20sp"
 		android:layout_marginHorizontal="20dp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
