--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
 	<!-- Base application theme. -->
-	<style name="Theme.App" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+	<style name="Theme.App" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+		<item name="backgroundColor">@color/dark_background</item>
+
 		<!-- Primary brand color. -->
 		<item name="colorPrimary">@color/darker_blue</item>
 		<item name="colorPrimaryVariant">@color/darker_blue</item>
@@ -15,4 +18,5 @@
 		<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 		<!-- Customize your theme here. -->
 	</style>
+
 </resources>
