--- a/app/src/main/res/layout/fragment_fighter_detail.xml
+++ b/app/src/main/res/layout/fragment_fighter_detail.xml
@@ -1,133 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:orientation="vertical"
 	tools:context=".view.fighterfilter.FighterFilterFragment">
 
 	<com.google.android.material.appbar.AppBarLayout
 		android:id="@+id/appBarLayout"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		app:titleTextColor="@color/white"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent">
 
-		<com.google.android.material.appbar.MaterialToolbar
-			android:id="@+id/toolbar"
+		<com.google.android.material.appbar.CollapsingToolbarLayout
 			android:layout_width="match_parent"
+			android:id="@+id/collapsingToolbarLayout"
 			android:layout_height="wrap_content"
+			android:clipChildren="false"
+			app:titleEnabled="false"
+			android:fitsSystemWindows="true"
+			android:clipToPadding="false"
+			app:expandedTitleGravity="top"
+			app:titleCollapseMode="fade"
+			app:expandedTitleMarginEnd="64dp"
 			android:theme="@style/Theme.App.Toolbar"
-			android:background="?colorPrimary"
-			app:title="@string/fighter_detail_toolbar_title"
-			app:titleTextAppearance="@style/Theme.App"
-			app:titleTextColor="@color/white">
+			app:contentScrim="?colorPrimary"
+			app:expandedTitleMarginStart="48dp"
+			app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-		</com.google.android.material.appbar.MaterialToolbar>
+			<androidx.constraintlayout.widget.ConstraintLayout
+				android:id="@+id/constraintHeader"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				tools:background="@color/star_active"
+				android:paddingBottom="20dp"
+				app:layout_collapseMode="parallax"
+				app:layout_collapseParallaxMultiplier="0.7"
+				app:layout_constraintTop_toBottomOf="@id/appBarLayout">
+
+				<TextView
+					android:id="@+id/textViewName"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginStart="20dp"
+					android:layout_marginTop="20dp"
+					android:layout_marginEnd="20dp"
+					android:ellipsize="end"
+					android:maxLines="1"
+					android:textColor="@color/white"
+					android:textSize="24sp"
+					android:textStyle="bold"
+					app:layout_constraintEnd_toStartOf="@id/textViewPrice"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@id/textViewDownloads"
+					tools:text="@tools:sample/lorem" />
+
+				<TextView
+					android:id="@+id/textViewUniverse"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginStart="20dp"
+					android:layout_marginTop="2dp"
+					android:layout_marginEnd="20dp"
+					android:alpha="0.5"
+					android:ellipsize="end"
+					android:maxLines="1"
+					android:textColor="@color/white"
+					app:layout_constraintEnd_toStartOf="@id/textViewPrice"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@id/textViewName"
+					tools:text="@tools:sample/lorem" />
+
+				<quevedo.soares.leandro.techtest.view.widget.RatingBar
+					android:id="@+id/ratingBar"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="20dp"
+					android:enabled="false"
+					app:colorActive="@color/star_active"
+					app:colorInactive="@color/dark_background"
+					app:layout_constraintEnd_toEndOf="@+id/imageViewAvatar"
+					app:layout_constraintStart_toStartOf="@+id/imageViewAvatar"
+					app:layout_constraintTop_toBottomOf="@id/imageViewAvatar"
+					app:starPaddingHorizontal="5dp"
+					app:starPaddingVertical="1dp"
+					app:starSize="25dp" />
+
+				<TextView
+					android:id="@+id/textViewDownloads"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="10dp"
+					android:alpha="0.75"
+					android:textColor="@color/white"
+					android:textSize="12sp"
+					app:layout_constraintEnd_toEndOf="@id/ratingBar"
+					app:layout_constraintStart_toStartOf="@id/ratingBar"
+					app:layout_constraintTop_toBottomOf="@id/ratingBar"
+					tools:text="@tools:sample/lorem" />
+
+				<TextView
+					android:id="@+id/textViewPrice"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginEnd="20dp"
+					android:background="@drawable/shape_universe_background"
+					android:gravity="center"
+					android:paddingHorizontal="10dp"
+					android:paddingVertical="5dp"
+					android:textColor="@color/black"
+					android:textSize="16sp"
+					android:textStyle="bold"
+					app:chipBackgroundColor="@color/white"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintTop_toTopOf="@+id/textViewName"
+					app:layout_constraintVertical_bias="1"
+					tools:text="@tools:sample/us_zipcodes" />
+
+				<ImageView
+					android:id="@+id/imageViewAvatar"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="20dp"
+					android:layout_marginEnd="20dp"
+					android:contentDescription="@string/content_description_fighter_detail_avatar"
+					android:minHeight="160dp"
+					app:layout_constraintDimensionRatio="1:1"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent"
+					tools:src="@tools:sample/avatars" />
+			</androidx.constraintlayout.widget.ConstraintLayout>
+
+			<com.google.android.material.appbar.MaterialToolbar
+				android:id="@+id/toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="?attr/actionBarSize"
+				app:layout_collapseMode="pin"
+				app:titleTextColor="@color/white"
+				app:title="@string/fighter_detail_toolbar_title"/>
+		</com.google.android.material.appbar.CollapsingToolbarLayout>
 
 	</com.google.android.material.appbar.AppBarLayout>
 
-	<TextView
-		android:id="@+id/textViewName"
-		android:layout_width="0dp"
-		android:layout_marginStart="20dp"
-		android:layout_height="wrap_content"
-		android:layout_marginEnd="20dp"
-		android:layout_marginTop="20dp"
-		android:ellipsize="end"
-		android:maxLines="1"
-		android:textSize="24sp"
-		android:textStyle="bold"
-		app:layout_constraintEnd_toStartOf="@+id/imageViewAvatar"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-		tools:text="@tools:sample/lorem" />
+	<androidx.core.widget.NestedScrollView
+		android:layout_width="match_parent"
+		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+		android:layout_height="match_parent">
 
-	<TextView
-		android:id="@+id/textViewUniverse"
-		android:layout_width="0dp"
-		android:layout_marginStart="20dp"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="2dp"
-		android:layout_marginEnd="20dp"
-		android:ellipsize="end"
-		android:maxLines="1"
-		app:layout_constraintEnd_toStartOf="@+id/imageViewAvatar"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/textViewName"
-		tools:text="@tools:sample/lorem" />
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_marginHorizontal="20dp"
+			android:layout_marginTop="20dp"
+			android:orientation="vertical">
 
-	<quevedo.soares.leandro.techtest.view.widget.RatingBar
-		android:id="@+id/ratingBar"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="20dp"
-		app:colorActive="@color/star_active"
-		app:colorInactive="@color/star_inactive"
-		android:enabled="false"
-		app:starSize="25dp"
-		app:starPaddingVertical="1dp"
-		app:starPaddingHorizontal="5dp"
-		android:layout_marginEnd="20dp"
-		android:layout_marginStart="20dp"
-		app:layout_constraintEnd_toStartOf="@+id/imageViewAvatar"
-		app:layout_constraintHorizontal_bias="0"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/textViewUniverse" />
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="20dp"
+				android:text="Description"
+				android:textColor="@color/black"
+				android:textSize="20sp"
+				android:textStyle="bold" />
 
-	<TextView
-		android:id="@+id/textViewDownloads"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="2dp"
-		app:layout_constraintEnd_toEndOf="@id/ratingBar"
-		app:layout_constraintStart_toStartOf="@id/ratingBar"
-		app:layout_constraintTop_toBottomOf="@id/ratingBar"
-		tools:text="@tools:sample/lorem" />
+			<TextView
+				android:id="@+id/textViewDescription"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				tools:text="@tools:sample/lorem/random" />
 
-	<TextView
-		android:id="@+id/textViewPrice"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="20dp"
-		android:layout_marginEnd="20dp"
-		android:layout_marginStart="20dp"
-		android:background="@drawable/shape_universe_background"
-		android:padding="10dp"
-		android:textColor="@color/white"
-		android:textSize="16sp"
-		android:textStyle="bold"
-		app:layout_constraintEnd_toStartOf="@+id/imageViewAvatar"
-		app:layout_constraintHorizontal_bias="0"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/textViewDownloads"
-		tools:text="@tools:sample/us_zipcodes" />
+		</LinearLayout>
+	</androidx.core.widget.NestedScrollView>
 
-	<ImageView
-		android:id="@+id/imageViewAvatar"
-		android:layout_width="0dp"
-		android:minHeight="160dp"
-		android:layout_marginEnd="20dp"
-		app:layout_constraintDimensionRatio="1:1"
-		android:layout_height="wrap_content"
-		app:layout_constraintEnd_toEndOf="parent"
-		android:layout_marginTop="20dp"
-		app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-		android:contentDescription="@string/content_description_fighter_detail_avatar"
-		tools:src="@tools:sample/avatars" />
-
-	<TextView
-		android:id="@+id/textViewDescription"
-		android:layout_width="0dp"
-		android:layout_height="0dp"
-		app:layout_constraintHeight_default="wrap"
-		android:layout_marginTop="40dp"
-		android:lineHeight="20sp"
-		android:layout_marginHorizontal="20dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/textViewPrice"
-		tools:text="@tools:sample/lorem/random" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
