--- a/app/src/main/res/layout/item_fighter.xml
+++ b/app/src/main/res/layout/item_fighter.xml
@@ -1,100 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:background="?attr/selectableItemBackground"
+<androidx.constraintlayout.widget.ConstraintLayout
 	android:layout_width="match_parent"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:layout_margin="15dp"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_height="wrap_content">
 
 	<ImageView
 		android:id="@+id/imageViewAvatar"
-		android:layout_width="73dp"
-		android:layout_height="73dp"
-		android:layout_margin="13dp"
-		app:layout_constraintBottom_toBottomOf="parent"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
 		android:src="@drawable/shape_logo"
 		app:layout_constraintDimensionRatio="1:1"
+		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
 		tools:src="@tools:sample/avatars" />
 
 	<TextView
 		android:id="@+id/textViewName"
-		android:layout_width="0dp"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginStart="13dp"
-		android:layout_marginEnd="13dp"
 		android:ellipsize="end"
 		android:maxLines="1"
 		android:textStyle="bold"
-		app:layout_constraintBottom_toTopOf="@id/textViewUniverse"
+		android:textSize="16sp"
+		android:shadowRadius="2"
+		android:layout_marginTop="15dp"
+		app:layout_constraintTop_toBottomOf="@id/imageViewAvatar"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintEnd_toStartOf="@id/text_view_downloads"
-		app:layout_constraintStart_toEndOf="@id/imageViewAvatar"
-		app:layout_constraintTop_toTopOf="@id/imageViewAvatar"
+		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintVertical_chainStyle="packed"
 		tools:text="@tools:sample/lorem" />
-
-	<TextView
-		android:id="@+id/textViewUniverse"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="2dp"
-		android:layout_marginEnd="13dp"
-		android:ellipsize="end"
-		android:maxLines="1"
-		app:layout_constraintBottom_toBottomOf="@id/imageViewAvatar"
-		app:layout_constraintEnd_toStartOf="@id/text_view_downloads"
-		app:layout_constraintStart_toStartOf="@id/textViewName"
-		app:layout_constraintTop_toBottomOf="@id/textViewName"
-		app:layout_constraintVertical_chainStyle="packed"
-		tools:text="@tools:sample/lorem" />
-
-	<TextView
-		android:id="@+id/textViewPrice"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginEnd="13dp"
-		android:ellipsize="end"
-		android:maxLines="1"
-		android:textAlignment="viewEnd"
-		android:layout_marginBottom="2dp"
-		app:layout_constraintStart_toStartOf="@id/text_view_downloads"
-		app:layout_constraintBottom_toTopOf="@id/textViewRate"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintVertical_chainStyle="packed"
-		tools:text="Price: $230" />
-
-	<TextView
-		android:id="@+id/textViewRate"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginEnd="13dp"
-		android:ellipsize="end"
-		android:maxLines="1"
-		app:layout_constraintStart_toStartOf="@id/text_view_downloads"
-		android:textAlignment="viewEnd"
-		app:layout_constraintBottom_toTopOf="@id/text_view_downloads"
-		android:layout_marginBottom="2dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/textViewPrice"
-		app:layout_constraintVertical_chainStyle="packed"
-		tools:text="Rate: 4" />
-
-	<TextView
-		android:id="@+id/text_view_downloads"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginEnd="13dp"
-		android:ellipsize="end"
-		android:maxLines="1"
-		android:textAlignment="viewEnd"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/textViewRate"
-		app:layout_constraintVertical_chainStyle="packed"
-		tools:text="Downloads: 12312330" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
