--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,6 +21,8 @@
 
 	<style name="Theme.App.Toolbar" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
 		<item name="colorOnPrimary">@color/white</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="titleTextColor">@color/white</item>
 	</style>
 
 	<style name="Theme.App.Button" parent="Widget.MaterialComponents.Button">
